Practicing Heading, Paragraph and Links

--- a/HTML/Heading, Paragraphs and links/Heading, Paragraphs and links.html
+++ b/HTML/Heading, Paragraphs and links/Heading, Paragraphs and links.html
@@ -4,6 +4,50 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Heading, Paragraphs and Links</title>
+    <link rel="stylesheet" href="style.css">
   </head>
-  <body></body>
+  <body>
+    <h1>My Bookmark Website using h1</h1>
+    <h2>Main bookmark heading using h2</h2>
+    <h3>Main bookmark heading using h3</h3>
+    <h4>Main bookmark heading using h4</h4>
+    <h5>Main bookmark heading using h5</h5>
+    <h6>Main bookmark heading using h6</h6>
+    <p style="background-color: bisque;">
+      Lorem ipsum dolor sit amet consectetur, adipisicing elit. Aperiam modi
+      quis, enim porro officiis architecto maiores aliquam ad obcaecati
+      excepturi ullam iure error?
+    </p>
+    <p style="background-color: rgb(135, 226, 226);">
+      Lorem ipsum dolor sit amet consectetur, adipisicing elit. Harum, odit.
+    </p>
+    <p style="background-color: aquamarine;">
+      Lorem ipsum dolor sit, amet consectetur adipisicing elit. Fugiat, iure
+      facilis quam quos quis ipsa.
+    </p>
+    <p style="background-color: aqua;">
+      Lorem ipsum dolor sit, amet consectetur adipisicing elit. Fugiat, iure
+      facilis quam quos quis ipsa.
+    </p>
+    <p>
+      Lorem ipsum dolor sit, amet consectetur adipisicing elit. Fugiat, iure
+      facilis quam quos quis ipsa.
+    </p>
+    <p style="background-color: rgb(113, 240, 172);">
+      Lorem ipsum dolor sit, amet consectetur adipisicing elit. Fugiat, iure
+      facilis quam quos quis ipsa.
+    </p>
+    <p style="background-color: rgb(76, 82, 82);">
+      Lorem ipsum dolor sit, amet consectetur adipisicing elit. Fugiat, iure
+      facilis quam quos quis ipsa.
+    </p>
+    <p style="background-color: rgb(255, 251, 171);">
+      Lorem ipsum dolor sit, amet consectetur adipisicing elit. Fugiat, iure
+      facilis quam quos quis ipsa.
+    </p>
+    <p style="background-color: rgb(254, 179, 225);">
+      Lorem ipsum dolor sit, amet consectetur adipisicing elit. Fugiat, iure
+      facilis quam quos quis ipsa.
+    </p>
+  </body>
 </html>
