Practiced form and input tags

--- a/HTML/Forms and input tags/input tag practice.html
+++ b/HTML/Forms and input tags/input tag practice.html
@@ -29,6 +29,45 @@
         />
       </div>
       <br />
+      <!-- Radio buttons -->
+      <div>
+        <label>Gender : </label>
+        <input type="radio" name="gender" id="male" value="male" />
+        <label for="male">Male</label>
+        <input type="radio" name="gender" id="female" value="female" />
+        <label for="female">Female</label>
+      </div>
+      <br />
+      <!-- Checkbox -->
+      <div>
+        <input type="checkbox" name="java" id="java" />
+        <label for="java">Java</label>
+        <br />
+        <input type="checkbox" name="SQL" id="SQL" />
+        <label for="SQL">SQL</label>
+        <br />
+        <input type="checkbox" name="JavaScript" id="JavaScript" />
+        <label for="JavaScript">JavaScript</label>
+        <br />
+        <br />
+      </div>
+      <!-- Text area -->
+      <div>
+        <textarea name="about" cols="40" rows="6">
+Tell us about yourself</textarea
+        >
+      </div>
+      <br />
+      <!-- Select Element -->
+      <select name="timing">
+        <option value="fulltime">Full time</option>
+        <option value="PartTime">Part time</option>
+        <option value="Flexible">Flexible</option>
+      </select>
+      <br />
+      <br />
+      <!-- Submit -->
+      <input type="submit" value="Submit" />
     </form>
   </body>
 </html>
