--- a/HTML/Audio, Video and Media/index.html
+++ b/HTML/Audio, Video and Media/index.html
@@ -78,9 +78,11 @@
     <iframe src="https://www.wikipedia.org/" height="500" width="100%"></iframe>
     <h3 style="color: rgb(152, 102, 40);">Sample 2</h3>
     <iframe src=https://www.codewithharry.com/tutorial/html-iframes height="500" width="100%"></iframe>
-  </body>
   <section>
     <h2 style="color: rgb(122, 12, 12);">Adding Embed video</video></h2>
-    <iframe width="560" height="315" src="https://www.youtube.com/embed/pAnGwRiQ4-4?si=6XOpDHpwLF_TtNta" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+    <iframe width="100%" height="315" src="https://www.youtube.com/embed/pAnGwRiQ4-4?si=6XOpDHpwLF_TtNta" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+    <h2 style="color: blueviolet;">Adding Map</h3>
+    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d314184.11001700815!2d80.20867324999999!3d13.04752545!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3a5265ea4f7d3361%3A0x6e61a70b6863d433!2sChennai%2C%20Tamil%20Nadu!5e1!3m2!1sen!2sin!4v1772352740939!5m2!1sen!2sin" width="100%" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
   </section>
+  </body>
 </html>
