corrected the syntax error in article id

--- a/HTML/Miscellaneous Tags/index.html
+++ b/HTML/Miscellaneous Tags/index.html
@@ -46,7 +46,7 @@
           </code>
           </pre>
         </article>
-        <article id="#entities">
+        <article id="entities">
           <h2>Entities</h2>
           <ol>
             <p>Entities are used to display</p>
@@ -65,7 +65,7 @@
             <li><p>Special characters such us</p></li>
           </ol>
         </article>
-        <article id="#quotation-tag">
+        <article id="quotation-tag">
           <h2>Quotation Tag</h2>
           <p>
             It tells search engines and screen readers that this specific text
@@ -81,7 +81,7 @@
             </blockquote>
           </ol>
         </article>
-        <article>
+        <article id="Obsolete-tags">
           <h2>Obsolete HTML Tags</h2>
           <p>
             Some tags have been deprecated or become obsolete. While modern
@@ -101,7 +101,7 @@
             >
           </p>
         </article>
-        <article id="#character-sets">
+        <article id="character-sets">
           <h2>Character Sets</h2>
           <p>
             A <em>Character set</em> is a set of symbols and characters that a
